--- a/examples/DotNetFramework/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/Web.config
+++ b/examples/DotNetFramework/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/Web.config
@@ -36,7 +36,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.1" newVersion="13.0.1" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -78,10 +78,22 @@
         <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
-      <dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
         <assemblyIdentity name="Azure.Core" publicKeyToken="92742159e12e44c8" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.2.0" newVersion="1.0.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.35.0.0" newVersion="1.35.0.0" />
       </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Azure.Identity" publicKeyToken="92742159e12e44c8" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-1.10.2.0" newVersion="1.10.2.0" />
+	  </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
