--- a/examples/Python/ChatApp/requirements.txt
+++ b/examples/Python/ChatApp/requirements.txt
@@ -1,3 +1,3 @@
-azure-identity==1.16.1
-azure-appconfiguration-provider==2.1.0
-openai==1.6.1
+azure-identity
+azure-appconfiguration-provider
+openai
