--- a/examples/Python/python-flask-webapp-sample/requirements.txt
+++ b/examples/Python/python-flask-webapp-sample/requirements.txt
@@ -1,4 +1,4 @@
 Flask==2.3.2
 azure-identity==1.16.1
-azure-appconfiguration-provider==1.3.0
-featuremanagement==1.0.0b1
+azure-appconfiguration-provider<3.0.0
+featuremanagement<3.0.0
