--- a/examples/QuickStart/DotNet/QuickStartApp/QuickStartApp.csproj
+++ b/examples/QuickStart/DotNet/QuickStartApp/QuickStartApp.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="6.0.1" />
+    <PackageReference Include="Azure.Identity" Version="1.14.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="8.4.0" />
   </ItemGroup>
 
 </Project>
